string repeat obsolete